--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-validation",
-  "homepage": "http://email-validation.donatas-k.com",
+  "homepage": "https://email-validation.donatas-k.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
